Debut menu principal et quelques test en parallèles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="Nouvellepartie">Nouvelle partie</string>
-    <string name="Tutoriel">Turoriel</string>
+    <string name="Tutoriel">Tutoriel</string>
     <string name="Paramètres">Paramètres</string>
     <string name="Défis">Défis</string>
 
