--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="Tutoriel">Tutoriel</string>
     <string name="Paramètres">Paramètres</string>
     <string name="Défis">Défis</string>
+    <string name="Jouer">Jouer</string>
 
 
 </resources>
