J'ai ajouté la vue de la mini-app de test que j'ai faite la semaine dernière. Elle est dans main -> java -> com.example.clement.sumito -> MainActivity Il faudrait qu'on puisse l'ouvrir en cliquant sur le bouton "jouter"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="Paramètres">Paramètres</string>
     <string name="Défis">Défis</string>
     <string name="Jouer">Jouer</string>
+    <string name="title_activity_main">MainActivity</string>
 
 
 </resources>
