--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,15 @@
     <string name="Paramètres">Paramètres</string>
     <string name="Défis">Défis</string>
     <string name="Jouer">Jouer</string>
+    <string name="deuxjoueurslocal">Jouer contre un humain en local</string>
+    <string name="partiesolo">Partie solo</string>
+    <string name="facile">Facile</string>
+    <string name="moyen">Moyen</string>
+    <string name="difficile">Difficile</string>
+    <string name="commencerpartie">Commencer la partie</string>
+    <string name="choisirdifficulte">Choisissez votre niveau de difficulté</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_choose">ChooseActivity</string>
 
 
 </resources>
